# hambaMetal

./: .gitignore  .gitmodules  demo_usage.py  main.py  pyproject.toml
.claude/: claude.md
app/: README.md  api.py  config.py  diffusion_engine.py  main.py  requirements.txt
app/frontend/: README.md  index.html  pnpm-lock.yaml  vite.config.ts
app/frontend/src/: App.tsx  app.tsx  constants.ts  index.css  main.tsx  mps-integration.md  types.ts
app/frontend/src/components/: Canvas.tsx  Controls.tsx  ErrorBoundary.tsx
app/frontend/src/hooks/: useWebSocket.ts
app/routers/: diffusion.py
src/: README.md  config.py  imagegen.py  streamdiffusion_for_existing_code.md  streamdiffusion_optimizations_plan.md
src/audio/: __init__.py  analyzer.py  types.py
src/diffusion/: __init__.py  base.py  sd15.py  stream.py
src/latent/: __init__.py  generator.py
src/profiling/: __init__.py  mps_profiler.py
src/prompt/: __init__.py  interpolator.py
